--- a/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page2.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page2.html.twig
@@ -1,306 +1,278 @@
 <style>
-  .pdf_page2_wrapper
-  {
-    max-width: 850px;
-    margin: 0 auto;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+	.pdf_page2_wrapper {
+		max-width: 850px;
+		margin: 0 auto;
+		font-family: Arial, Helvetica, sans-serif;
+	}
 
-  .pdf_page2_wrapper ol,
-  .pdf_page2_wrapper ul
-  {
-    list-style: none;
-  }
+	.pdf_page2_wrapper ol,
+	.pdf_page2_wrapper ul {
+		list-style: none;
+	}
 
-  .pdf_page2_wrapper .page2
-  {
-    padding: 4.375rem;
-  }
+	.pdf_page2_wrapper .page2 {
+		padding: 100px 70px;
+	}
 
-  .pdf_page2_wrapper .page2 h1
-  {
-    color: #003C71;
-    font-size: 2.75rem;
-    margin: 0 0 1rem;
-  }
+	.pdf_page2_wrapper .page2 h1 {
+		color: #003C71;
+		font-size: 35px;
+		font-weight: 800;
+		margin: 0 0 1rem;
+	}
 
-  .pdf_page2_wrapper .page2 sup
-  {
-    font-size: 0.625rem;
-    text-transform: uppercase;
-  }
+	.pdf_page2_wrapper .page2 sup {
+		font-size: 0.625rem;
+		text-transform: uppercase;
+	}
 
-  .pdf_page2_wrapper .page2 .content
-  {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+	.pdf_page2_wrapper .page2 .content {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+	}
 
-  .pdf_page2_wrapper .page2 .content p
-  {
-    font-size: 0.8125rem;
-    line-height: 1.1875rem;
-  }
+	.pdf_page2_wrapper .page2 .content p {
+		font-size: 12px;
+		line-height: 16px;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section
-  {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 66.66%;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section {
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+		width: 66.66%;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .container_top_left
-  {
-    padding-right: 0.75rem;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .container_top_left {
+		padding-right: 0.75rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section h3,
-  .pdf_page2_wrapper .page2 .content .left_section h4,
-  .pdf_page2_wrapper .page2 .content .left_section h2
-  {
-    font-weight: 800;
-    margin: 0;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section h3,
+	.pdf_page2_wrapper .page2 .content .left_section h4,
+	.pdf_page2_wrapper .page2 .content .left_section h2 {
+		font-weight: 800;
+		margin: 0;
+	}
+	.pdf_page2_wrapper .page2 .content .left_section h2 {
+		font-size: 22px;
+		margin-top: 30px;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section h3
-  {
-    font-size: 16px;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section h3 {
+		font-size: 15px;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features
-  {
-    padding: 0;
-    margin-top: 1.875rem;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features {
+		padding: 0;
+		margin-top: 1.875rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item
-  {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item {
+		display: -webkit-box;
+		display: -ms-flexbox;
+		display: flex;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item>div:nth-child(2)
-  {
-    padding: 0 0.75rem;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item>div:nth-child(2) {
+		padding: 0 0.75rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_img
-  {
-    width: 16.66%;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_img {
+		width: 16.66%;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_img img
-  {
-    width: 100%;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_img img {
+		width: 100%;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_item_content
-  {
-    width: 83.33%;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_item_content {
+		width: 83.33%;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_item_content h4
-  {
-    font-size: 1rem;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_item_content h4 {
+		font-size: 1rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_item_content p.description_light
-  {
-    color: #9e9e9e;
-  }
+	.pdf_page2_wrapper .page2 .content .left_section .features .feature_item .feature_item_content p.description_light {
+		color: #9e9e9e;
+	}
 
-  .pdf_page2_wrapper .page2 .content .right_section
-  {
-    -webkit-box-sizing: border-box;
-    box-sizing: border-box;
-    width: 33.33%;
-    padding-top: 3.125rem;
-  }
+	.pdf_page2_wrapper .page2 .content .right_section {
+		-webkit-box-sizing: border-box;
+		box-sizing: border-box;
+		width: 33.33%;
+		padding-top: 3.125rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .right_section .container_top_right
-  {
-    padding: 0.75rem;
-  }
+	.pdf_page2_wrapper .page2 .content .right_section .container_top_right {
+		padding: 0.75rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .right_section .container_top_right .quote
-  {
-    color: #00BFB2;
-    font-style: italic;
-    font-size: 1.25rem;
-    font-size: 1.5rem;
-    line-height: 1.75rem;
-    margin: 0;
-  }
+	.pdf_page2_wrapper .page2 .content .right_section .container_top_right .quote {
+		color: #00BFB2;
+		font-style: italic;
+		font-size: 1.25rem;
+		font-size: 20px;
+		line-height: 1.75rem;
+		margin: 0;
+	}
 
-  .pdf_page2_wrapper .page2 .content .right_section .container_top_right .quote_from
-  {
-    font-size: 0.625rem;
-    color: grey;
-    line-height: 0.8125rem;
-  }
+	.pdf_page2_wrapper .page2 .content .right_section .container_top_right .quote_from {
+		font-size: 9px;
+		color: grey;
+		line-height: 0.8125rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .right_section .container_bottom_right
-  {
-    padding: 0 0.625rem;
-  }
+	.pdf_page2_wrapper .page2 .content .right_section .container_bottom_right {
+		padding: 0 0.625rem;
+	}
 
-  .pdf_page2_wrapper .page2 .content .right_section .container_bottom_right img
-  {
-    width: 100%;
-  }
+	.pdf_page2_wrapper .page2 .content .right_section .container_bottom_right img {
+		width: 100%;
+	}
 
-  .pdf_page2_wrapper .page2 .footnotes
-  {
-    font-size: 0.5625rem;
-    line-height: 1.125rem;
-    font-style: italic;
-    color: #939393;
-  }
+	.pdf_page2_wrapper .page2 .footnotes {
+		font-size: 7px;
+		line-height: 14px;
+		font-style: italic;
+		color: #939393;
+	}
 
-  .pdf_page2_wrapper .page2 .footnotes ul
-  {
-    padding: 0;
-  }
+	.pdf_page2_wrapper .page2 .footnotes ul {
+		padding: 0;
+	}
 
-  .pdf_page2_wrapper .page2 .footnotes ul li span
-  {
-    position: relative;
-    bottom: 0.125rem;
-  }
+	.pdf_page2_wrapper .page2 .footnotes ul li span {
+		position: relative;
+		bottom: 0.125rem;
+	}
 
-  .icon1::before
-  {
-    content: url('../images/icon1.PNG');
-    display: block;
-  }
+	.icon1::before {
+		content: url('../images/icon1.PNG');
+		display: block;
+	}
 
-  .icon2::before
-  {
-    content: url('../images/icon2.PNG');
-    display: block;
-  }
+	.icon2::before {
+		content: url('../images/icon2.PNG');
+		display: block;
+	}
 
-  .icon3::before
-  {
-    content: url('../images/icon3.PNG');
-    display: block;
-  }
+	.icon3::before {
+		content: url('../images/icon3.PNG');
+		display: block;
+	}
 
-  .icon4::before
-  {
-    content: url('../images/icon4.PNG');
-    display: block;
-  }
+	.icon4::before {
+		content: url('../images/icon4.PNG');
+		display: block;
+	}
 
-  .right-bottom:before
-  {
-    content: url('../images/right_bottom.PNG');
-    display: block;
-  }
+	.right-bottom:before {
+		content: url('../images/right_bottom.PNG');
+		display: block;
+	}
 
 
-  /*# sourceMappingURL=pdf_page2.css.map */
+	/*# sourceMappingURL=pdf_page2.css.map */
 </style>
 <div class="pdf_page2_wrapper">
-  <div class="page2">
-    <h1 class="title">
-      Single-Use. Safer Investment.
-    </h1>
-    <div class="content">
-      <div class="left_section">
-        <div class="container_top_left">
-          <h3>
-            Reusable bronchoscopes can be an unnecessary drain on hospital budgets.
-          </h3>
-          <p>
-            On top of reprocessing costs, repairs, annual service contracts, and procedure delays when scopes aren’t available, costly infections still occur: $28,383 per treatment per case.<sup>1</sup>
-          </p>
-          <p>
-            The misconception that single-use is too expensive only clouds the solution. Sterile single-use bronchoscopes like the GlideScope<sup>®</sup>
-            BFlex<sup>tm</sup>
-            can help facilities eliminate these extra costs and delays.
-          </p>
-        </div>
-        <div class="container_bottom_left">
-          <h2>
-            Single-use bronchoscopes mean improved accessibility and safety
-          </h2>
-          <ul class="features">
-            <li class="feature_item">
-              <div class="feature_img icon1"></div>
-              <div class="feature_item_content column9">
-                <h4 class="feature_item_heading">Eliminate reprocessing costs</h4>
-                <p class="description_light">
-                  Single-use bronchoscopes don’t require reprocessing. Getting reusables patient-ready is extensive and time consuming: the cost for reprocessing one endoscope ranges from $50.14 to $152.66.<sup>2</sup>
-                </p>
-              </div>
-            </li>
-            <li class="feature_item">
-              <div class="feature_img icon2"></div>
-              <div class="feature_item_content column9">
-                <h4 class="feature_item_heading">No expensive repairs</h4>
-                <p class="description_light">
-                  Damage to reusable bronchoscopes is possible during procedures and repairs can be expensive. One study cites $148 for repairs per use.<sup>3</sup>
-                </p>
-              </div>
-            </li>
-            <li class="feature_item">
-              <div class="feature_img icon3"></div>
-              <div class="feature_item_content column9">
-                <h4 class="feature_item_heading">Minimize the risk of cross contamination</h4>
-                <p class="description_light">
-                  Single-use bronchoscopes can protect against infection. Multiple studies show that costly infections occur even when reprocessing exceeds national guidelines. The cost of treatment for each infection due to cross contamination and subsequent infection
-                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        is $28,383.<sup>4</sup>
-                </p>
-              </div>
-            </li>
-            <li class="feature_item">
-              <div class="feature_img icon4"></div>
-              <div class="feature_item_content">
-                <h4 class="feature_item_heading">Avoid service contracts</h4>
-                <p class="description_light">
-                  Annual contract fees per bronchoscope add up and often exclude preventable damage, which can cost nearly the same in additional fees for out-of-pocket repairs and limit availability during off-site servicing.
-                </p>
-              </div>
-            </li>
-          </ul>
-        </div>
+	<div class="page2">
+		<h1 class="title">
+			Single-Use. Safer Investment.
+		</h1>
+		<div class="content">
+			<div class="left_section">
+				<div class="container_top_left">
+					<h3>
+						Reusable bronchoscopes can be an unnecessary drain on hospital budgets.
+					</h3>
+					<p>
+						On top of reprocessing costs, repairs, annual service contracts, and procedure delays when scopes aren’t available, costly infections still occur: $28,383 per treatment per case.<sup>1</sup>
+					</p>
+					<p>
+						The misconception that single-use is too expensive only clouds the solution. Sterile single-use bronchoscopes like the GlideScope<sup>®</sup>
+						BFlex<sup>tm</sup>
+						can help facilities eliminate these extra costs and delays.
+					</p>
+				</div>
+				<div class="container_bottom_left">
+					<h2>
+						Single-use bronchoscopes mean improved accessibility and safety
+					</h2>
+					<ul class="features">
+						<li class="feature_item">
+							<div class="feature_img icon1"></div>
+							<div class="feature_item_content column9">
+								<h4 class="feature_item_heading">Eliminate reprocessing costs</h4>
+								<p class="description_light">
+									Single-use bronchoscopes don’t require reprocessing. Getting reusables patient-ready is extensive and time consuming: the cost for reprocessing one endoscope ranges from $50.14 to $152.66.<sup>2</sup>
+								</p>
+							</div>
+						</li>
+						<li class="feature_item">
+							<div class="feature_img icon2"></div>
+							<div class="feature_item_content column9">
+								<h4 class="feature_item_heading">No expensive repairs</h4>
+								<p class="description_light">
+									Damage to reusable bronchoscopes is possible during procedures and repairs can be expensive. One study cites $148 for repairs per use.<sup>3</sup>
+								</p>
+							</div>
+						</li>
+						<li class="feature_item">
+							<div class="feature_img icon3"></div>
+							<div class="feature_item_content column9">
+								<h4 class="feature_item_heading">Minimize the risk of cross contamination</h4>
+								<p class="description_light">
+									Single-use bronchoscopes can protect against infection. Multiple studies show that costly infections occur even when reprocessing exceeds national guidelines. The cost of treatment for each infection due to cross contamination and subsequent infection
+																																																																																																																																																																											                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        is $28,383.<sup>4</sup>
+								</p>
+							</div>
+						</li>
+						<li class="feature_item">
+							<div class="feature_img icon4"></div>
+							<div class="feature_item_content">
+								<h4 class="feature_item_heading">Avoid service contracts</h4>
+								<p class="description_light">
+									Annual contract fees per bronchoscope add up and often exclude preventable damage, which can cost nearly the same in additional fees for out-of-pocket repairs and limit availability during off-site servicing.
+								</p>
+							</div>
+						</li>
+					</ul>
+				</div>
 
-      </div>
-      <div class="right_section">
-        <div class="container_top_right">
-          <p class="quote">
-            To reduce patient exposure to contaminated bronchoscopes, institutions should consider shifting from HLD to sterilization.
-          </p>
-          <p class="quote_from">
-            — Ofstead, C.L., et al. “Effectiveness of Reprocessing for Flexible Bronchoscopes and Endobronchial Ultrasound Bronchoscopes.” American College of Chest Physicians. 2018.
-          </p>
-        </div>
-        <div class="container_bottom_right right-bottom"></div>
-      </div>
-    </div>
-    <div class="footnotes">
-      <ul>
-        <li class="footnote_content">
-          <span>1</span>
-          Terjesen, C.L. et al. Early Assessment of the Likely Cost Effectiveness of Single-Use Flexible Video Bronchoscopes. PharmacoEconomics Open (2017). 1:133-14
-        </li>
-        <li class="footnote_content">
-          <span>2</span>
-          Ofstead, C.L. et al. A Glimpse at the True Cost of Reprocessing Endoscopes: Results of a Pilot Project. www.iahcsmm.org. 2017
-        </li>
-        <li class="footnote_content">
-          <span>3</span>
-          Sohrt, Anne, et al. “Cost Comparison of Single-Use Versus Reusable Bronchoscopes Used for Percutaneous Dilatational Tracheostomy.” PharmacoEconomics-open (2018): 1-7
-        </li>
-        <li class="footnote_content">
-          <span>4</span>
-          Terjesen, C.L. et al. Early Assessment of the Likely Cost Effectiveness of Single-Use Flexible Video Bronchoscopes. PharmacoEconomics Open (2017). 1:133-14
-        </li>
-      </ul>
+			</div>
+			<div class="right_section">
+				<div class="container_top_right">
+					<p class="quote">
+						To reduce patient exposure to contaminated bronchoscopes, institutions should consider shifting from HLD to sterilization.
+					</p>
+					<p class="quote_from">
+						— Ofstead, C.L., et al. “Effectiveness of Reprocessing for Flexible Bronchoscopes and Endobronchial Ultrasound Bronchoscopes.” American College of Chest Physicians. 2018.
+					</p>
+				</div>
+				<div class="container_bottom_right right-bottom"></div>
+			</div>
+		</div>
+		<div class="footnotes">
+			<ul>
+				<li class="footnote_content">
+					<span>1</span>
+					Terjesen, C.L. et al. Early Assessment of the Likely Cost Effectiveness of Single-Use Flexible Video Bronchoscopes. PharmacoEconomics Open (2017). 1:133-14
+				</li>
+				<li class="footnote_content">
+					<span>2</span>
+					Ofstead, C.L. et al. A Glimpse at the True Cost of Reprocessing Endoscopes: Results of a Pilot Project. www.iahcsmm.org. 2017
+				</li>
+				<li class="footnote_content">
+					<span>3</span>
+					Sohrt, Anne, et al. “Cost Comparison of Single-Use Versus Reusable Bronchoscopes Used for Percutaneous Dilatational Tracheostomy.” PharmacoEconomics-open (2018): 1-7
+				</li>
+				<li class="footnote_content">
+					<span>4</span>
+					Terjesen, C.L. et al. Early Assessment of the Likely Cost Effectiveness of Single-Use Flexible Video Bronchoscopes. PharmacoEconomics Open (2017). 1:133-14
+				</li>
+			</ul>
 
-    </div>
-  </div>
+		</div>
+	</div>
 </div>
