--- a/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page2.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page2.html.twig
@@ -1,6 +1,6 @@
 <style>
 	.pdf_page2_wrapper {
-		max-width: 850px;
+		max-width: 53.125rem;
 		margin: 0 auto;
 		font-family: Arial, Helvetica, sans-serif;
 	}
@@ -11,12 +11,12 @@
 	}
 
 	.pdf_page2_wrapper .page2 {
-		padding: 100px 70px;
+		padding: 4.375rem;
 	}
 
 	.pdf_page2_wrapper .page2 h1 {
 		color: #003C71;
-		font-size: 35px;
+		font-size: 2.1875rem;
 		font-weight: 800;
 		margin: 0 0 1rem;
 	}
@@ -33,8 +33,8 @@
 	}
 
 	.pdf_page2_wrapper .page2 .content p {
-		font-size: 12px;
-		line-height: 16px;
+		font-size: 0.75rem;
+		line-height: 1rem;
 	}
 
 	.pdf_page2_wrapper .page2 .content .left_section {
@@ -54,12 +54,12 @@
 		margin: 0;
 	}
 	.pdf_page2_wrapper .page2 .content .left_section h2 {
-		font-size: 22px;
-		margin-top: 30px;
+		font-size: 1.375rem;
+		margin-top: 1.875rem;
 	}
 
 	.pdf_page2_wrapper .page2 .content .left_section h3 {
-		font-size: 15px;
+		font-size: 0.9375rem;
 	}
 
 	.pdf_page2_wrapper .page2 .content .left_section .features {
@@ -112,13 +112,13 @@
 		color: #00BFB2;
 		font-style: italic;
 		font-size: 1.25rem;
-		font-size: 20px;
+		font-size: 1.25rem;
 		line-height: 1.75rem;
 		margin: 0;
 	}
 
 	.pdf_page2_wrapper .page2 .content .right_section .container_top_right .quote_from {
-		font-size: 9px;
+		font-size: 0.5625rem;
 		color: grey;
 		line-height: 0.8125rem;
 	}
@@ -132,8 +132,8 @@
 	}
 
 	.pdf_page2_wrapper .page2 .footnotes {
-		font-size: 7px;
-		line-height: 14px;
+		font-size: 0.4375rem;
+		line-height: 0.875rem;
 		font-style: italic;
 		color: #939393;
 	}
@@ -147,33 +147,38 @@
 		bottom: 0.125rem;
 	}
 
-	.icon1::before {
+	.pdf_page2_wrapper .page2 .icon1::before {
 		content: url('../images/icon1.PNG');
 		display: block;
 	}
 
-	.icon2::before {
+	.pdf_page2_wrapper .page2 .icon2::before {
 		content: url('../images/icon2.PNG');
 		display: block;
 	}
 
-	.icon3::before {
+	.pdf_page2_wrapper .page2 .icon3::before {
 		content: url('../images/icon3.PNG');
 		display: block;
 	}
 
-	.icon4::before {
+	.pdf_page2_wrapper .page2 .icon4::before {
 		content: url('../images/icon4.PNG');
 		display: block;
 	}
 
-	.right-bottom:before {
+	.pdf_page2_wrapper .page2 .right-bottom:before {
 		content: url('../images/right_bottom.PNG');
 		display: block;
+		width: 13rem;
+		height: 29.125rem;
+		background-color: grey;
 	}
-
-
-	/*# sourceMappingURL=pdf_page2.css.map */
+	.pdf_page2_wrapper .page2 .feature_img {
+		width: 4.25rem;
+		height: 3.75rem;
+		background-color: grey;
+	}
 </style>
 <div class="pdf_page2_wrapper">
 	<div class="page2">
@@ -224,7 +229,7 @@
 								<h4 class="feature_item_heading">Minimize the risk of cross contamination</h4>
 								<p class="description_light">
 									Single-use bronchoscopes can protect against infection. Multiple studies show that costly infections occur even when reprocessing exceeds national guidelines. The cost of treatment for each infection due to cross contamination and subsequent infection
-																																																																																																																																																																											                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        is $28,383.<sup>4</sup>
+																																																																																																																																																																																																																																																												                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        is $28,383.<sup>4</sup>
 								</p>
 							</div>
 						</li>
