--- a/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page1.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page1.html.twig
@@ -1,6 +1,6 @@
 <style>
 	.pdf_page1_wrapper {
-		height: 63.25rem;
+		height: 63.75rem;
 		max-width: 53.125rem;
 		margin: 0 auto;
 		font-family: Arial, Helvetica, sans-serif;
@@ -28,7 +28,7 @@
 	}
 
 	.pdf_page1_wrapper .container.pdf_page1 p {
-		font-size: 3.125rem;
+		font-size: 2.8125rem;
 		line-height: 4.0625rem;
 		color: #003C71;
 	}
@@ -38,7 +38,7 @@
 	}
 
 	.pdf_page1_wrapper .container.pdf_page1 p.pdf_intro_footnote {
-		font-size: 1.6875rem;
+		font-size: 1.5625rem;
 		line-height: 1.875rem;
 		color: black;
 	}
@@ -46,11 +46,17 @@
 	.glidescope-logo::before {
 		content: url('../images/SB-Logo.PNG');
 		display: block;
+		width: 21.875rem;
+		height: 3.25rem;
+		background-color: grey;
 	}
 
 	.verathon-logo::before {
 		content: url('../images/verathon-Logo.PNG');
 		display: block;
+		width: 11.4375rem;
+		height: 3.625rem;
+		background-color: grey;
 	}
 
 
@@ -62,7 +68,7 @@
 		<div class="pdf_intro">
 			<p>
 				<span class="boldText">Your Cost-Comparison
-																																																							                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          Snapshot</span>:Single-use vs. reusable bronchoscopes</p>
+																																																																																																				                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          Snapshot</span>:Single-use vs. reusable bronchoscopes</p>
 			<p class="pdf_intro_footnote">See how current operating costs for reusable bronchoscopes at
 				<span class="boldText">{{request}}</span>
 				compare to single-use.</p>
