--- a/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
+++ b/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
@@ -1,18 +1,16 @@
-<<<<<<< HEAD
-.h5p-image-hotspot { 
+.h5p-image-hotspot {
   font-size: 1.2rem;
-}
-=======
->>>>>>> 6b0e9d08 (Adding final css and js files for static image hotspot after client confirmation)
-.h5p-content-controls {
   display: none;
 }
+
 .h5p-image-hotspot-popup {
   padding: 0;
 }
+
 .h5p-image-hotspot-has-header .h5p-image-hotspot-popup-body {
   padding: 0;
 }
+
 .h5p-image-hotspot-popup-body {
   display: flex;
   justify-content: center;
@@ -20,33 +18,31 @@
   flex-direction: column;
   padding: 0;
 }
+
 .h5p-image-hotspot-popup-body .h5p-text {
-<<<<<<< HEAD
   padding: 2.5rem;
 }
 
 @media only screen and (min-device-width: 768px) {
-  .h5p-image-hotspot { 
+  .h5p-image-hotspot {
     font-size: 2rem;
   }
-=======
-  padding: 40px;
-}
 
-@media only screen and (min-device-width: 768px) {
->>>>>>> 6b0e9d08 (Adding final css and js files for static image hotspot after client confirmation)
+  .h5p-image-hotspot {
+    font-size: 2rem;
+  }
+
   .h5p-image-hotspot-popup {
     width: 80%;
     max-width: 520px;
   }
+
   .h5p-image-hotspot-popup-body .h5p-text {
-<<<<<<< HEAD
+
     padding: 3.25rem;
-=======
-    padding: 52px;
->>>>>>> 6b0e9d08 (Adding final css and js files for static image hotspot after client confirmation)
     max-width: 50%;
   }
+
   .h5p-image-hotspot-popup-body {
     flex-direction: row;
   }
