--- a/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
+++ b/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
@@ -280,7 +280,7 @@ body {
 .bflex-calculator .form-number::-webkit-outer-spin-button,
 .bflex-calculator .form-number::-webkit-inner-spin-button {
     -webkit-appearance: auto;
-    height: 22px;
+    height: 1.375rem;
 }
 
 .bflex-calculator input[type=number] {
