--- a/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
@@ -218,7 +218,7 @@
                 <div class="row">
                   <div class="column1">
                     <div>
-                      {{element.annual_out_of_pocket_repair_cost}}
+                      {{element.annual_out_of_pocket_repair_cost|currency}}
                     </div>
                     <div class="sliderMinMax">
                       <div class="min">Low</div>
