--- a/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
+++ b/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
@@ -109,6 +109,7 @@ body {
     font-weight: bold;
     left: .75rem;
     margin: 0 1.875rem 1.5rem 1.25rem;
+    color: #7c7c7c;
 }
 
 .bflex-calculator .stepHead span,
