--- a/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
+++ b/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
@@ -758,6 +758,11 @@ body {
     left: -40px;
 }
 
+.bflex-calculator .step3Wrapper .step .left .descriptionWrapper ul {
+    margin-left: 2rem;
+    list-style: unset;
+}
+
 @media screen and (min-width: 768px) {
     .bflex-calculator .container {
         flex-wrap: nowrap;
