--- a/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
+++ b/docroot/modules/custom/verathon_bflex_calculator/css/verathon-bflex-calculator.css
@@ -768,7 +768,7 @@ body {
 }
 
 .bflex-calculator .submitSectionWrapper .row>.column50:nth-child(2) .form-submit:hover {
-    background-color: #00BFB2;
+    background-color: #00c2b5;
     transition: none;
 }
 
