--- a/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page1.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/pdf--verathon-bflex-calculator--page1.html.twig
@@ -56,10 +56,10 @@
 	}
 
 	.verathon-logo::before {
-		content: url('{{url('<front>')}}modules/custom/verathon_bflex_calculator/images/verathon-Logo.png');
+		content: url('{{url('<front>')}}modules/custom/verathon_bflex_calculator/images/verathon-Logo.PNG');
 		display: block;
-		width: 11.4375rem;
-		height: 3.625rem;
+		width: 9.25rem;
+		height: 1.875rem;
 		background-color: grey;
 	}
 
