--- a/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
+++ b/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
@@ -1,18 +1,23 @@
 .h5p-content ul.h5p-actions {
   display: none;
 }
-.h5p-image-hotspot { 
+
+.h5p-image-hotspot {
   font-size: 1.2rem;
 }
+
 .h5p-content-controls {
   display: none;
 }
+
 .h5p-image-hotspot-popup {
   padding: 0;
 }
+
 .h5p-image-hotspot-has-header .h5p-image-hotspot-popup-body {
   padding: 0;
 }
+
 .h5p-image-hotspot-popup-body {
   display: flex;
   justify-content: center;
@@ -20,14 +25,17 @@
   flex-direction: column;
   padding: 0;
 }
+
 .h5p-image-hotspot-popup-body .h5p-text {
   padding: 2.5rem;
 }
+
 .h5p-image-hotspot-popup-body .h5p-text p {
   font-size: 1rem;
   line-height: 1.5rem;
   color: #4D4D4F;
 }
+
 .h5p-image-hotspot-popup-body .h5p-text p strong {
   display: block;
   line-height: 1.25rem;
@@ -35,19 +43,204 @@
   margin-bottom: 1.5rem;
 }
 
-@media only screen and (min-device-width: 768px) {
-  .h5p-image-hotspot { 
+@media only screen and (min-width: 768px) {
+  .h5p-image-hotspot {
     font-size: 2rem;
   }
+
   .h5p-image-hotspot-popup {
     width: 80%;
     max-width: 520px;
   }
+
   .h5p-image-hotspot-popup-body .h5p-text {
     padding: 3.25rem;
     max-width: 50%;
   }
+
   .h5p-image-hotspot-popup-body {
     flex-direction: row;
   }
 }
+
+/* Global Form Styling Starts here*/
+
+form {
+  text-align: left;
+  width: 100%;
+  margin: 0 auto;
+  font-family: Helvetica, Arial, sans-serif;
+  color: #212529;
+}
+
+form .form-item {
+  margin-top: 1rem;
+  padding-top: 0;
+}
+
+form .form-item input[type="text"],
+form .form-item input[type="tel"],
+form .form-item input[type="email"],
+form .form-item input[type="url"],
+form .form-item input[type="password"],
+form .form-item input[type="search"],
+form .form-item input[type="text"]:focus,
+form .form-item input[type="tel"]:focus,
+form .form-item input[type="email"]:focus,
+form .form-item input[type="url"]:focus,
+form .form-item input[type="password"]:focus,
+form .form-item input[type="search"]:focus,
+form .form-item select,
+form .form-item textarea:focus {
+  background: #fff;
+  margin: 0 0 .625rem;
+  display: block;
+  border: .0625rem solid #999;
+  padding: .5rem .6875rem;
+  height: 2.125rem;
+  color: #999;
+  border-radius: 0;
+  width: 100%;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-top: .5rem;
+  outline: none;
+}
+
+form .form-item textarea,
+form .form-item textarea:focus,
+form .form-item select {
+  font-size: inherit;
+  font-family: inherit;
+  letter-spacing: normal;
+  line-height: 1.5;
+}
+
+form .form-item textarea,
+form .form-item textarea:focus {
+  padding: .375rem .5rem;
+  line-height: 1.5;
+  border: .0625rem solid #999;
+  resize: none;
+  height: 10rem;
+  width: 100%;
+  overflow: auto;
+  margin: 0;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: .5rem 0 0 0;
+  outline: none;
+}
+
+form .form-item select {
+  margin-left: .0625rem;
+  padding: .3125rem .25rem;
+  color: black;
+}
+
+form .form-item .required-field {
+  color: #790000;
+  margin-left: .25rem;
+}
+
+form .form-item .radio-container {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+
+form .form-item .radio-container ul {
+  margin: .375rem 0 .375rem .3125rem;
+  padding: 0;
+}
+
+form .form-item .radio-container ul li {
+  margin: 0 .5rem .625rem 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: reverse;
+  -ms-flex-direction: row-reverse;
+  flex-direction: row-reverse;
+}
+
+form .form-item .radio-container ul li input[type="radio"] {
+  margin: 0;
+  width: 100%;
+  padding: .3125rem .25rem;
+}
+
+form .form-item .radio-container ul li label {
+  display: inline-block;
+  letter-spacing: inherit;
+  vertical-align: middle;
+  cursor: pointer;
+  padding: 0;
+  width: auto;
+  line-height: 1.5;
+  font-size: .875rem;
+  vertical-align: middle;
+  max-width: 85%;
+  white-space: normal;
+}
+
+form .form-actions {
+  padding: 1rem 0 .625rem 0;
+  margin: 1rem 0 0 0;
+  clear: both;
+  width: 100%;
+}
+
+form .form-actions input[type=submit] {
+  font-size: 1rem;
+  width: 100%;
+  margin: 0 1rem 0 0;
+  cursor: pointer;
+  border-radius: 0;
+  border: none;
+  background: #157cd1;
+  color: #fff;
+  display: inline-block;
+  vertical-align: top;
+  text-decoration: none;
+  padding: .4375rem 1.0625rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  form {
+    margin: 0 auto;
+  }
+
+  form .form-item select {
+    width: 49%;
+  }
+
+  form .form-item .radio-container ul li {
+    display: inline-block;
+  }
+
+  form .form-actions input[type=submit] {
+    width: auto;
+  }
+}
+
+:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) {
+  width: 50%;
+  margin: 0 auto;
+  margin-top: 3.125rem;
+}
+
+@media screen and (max-width: 480px) {
+  :is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) .form-item {
+  padding: 0;
+}
+
+/* Global Forms Styling Ends here */
