--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -105,3 +105,52 @@
     padding-bottom: 7.5rem;
   }
 }
+
+/* Drupal Default Form Styles */
+form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) {
+  width: 100%;
+  margin-top: 0;
+}
+
+form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) .form-item {
+  padding: 0;
+}
+
+form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) .form-actions input[type=submit] {
+  font-size: 1rem;
+  width: 100%;
+  margin: 0 1rem 0 0;
+  cursor: pointer;
+  border-radius: 0;
+  border: none;
+  background: #157cd1;
+  color: #fff;
+  display: inline-block;
+  vertical-align: top;
+  text-decoration: none;
+  padding: .6375rem 1.0625rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+
+@media screen and (min-width: 768px) {
+  form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) {
+    width: 50%;
+    margin: 0 auto;
+    margin-top: 3.125rem;
+    max-width: 31.25rem;
+  }
+
+  form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search-form, #search-block-form) .form-actions input[type=submit] {
+    width: auto;
+  }
+}
+
+/* Education and Training CSS Issues */
+
+.education-training .search form input.form-autocomplete,
+.education-training .search form .form-item .form-select:not(.editor) {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+  line-height: 1.625rem;
+}
