added font family arial for popup

--- a/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
+++ b/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
@@ -28,6 +28,7 @@
 
 .h5p-image-hotspot-popup-body .h5p-text {
   padding: 2.5rem;
+  font-family: Arial;
 }
 
 .h5p-image-hotspot-popup-body .h5p-text p {
