--- a/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
+++ b/docroot/modules/custom/verathon_bflex_calculator/templates/form--verathon-bflex-calculator-verathon-bflex-calculator.html.twig
@@ -5,7 +5,6 @@
     {{element.form_token}}
     {{element.form_build_id}}
     <div id="bflex-calculator" class="bflex-calculator">
-
       <div id="hero" class="hero blueBackground">
         <div class="container">
           <div class="row">
@@ -345,7 +344,8 @@
           </div>
         </div>
       </div>
-    </form>
+    </div>
+  </form>
   {% else %}
     {% set calculation = element['#calculations'] %}
     <div class="bflexResults">
