VER2-1483 background image fix

--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -68,6 +68,11 @@
   background-repeat: no-repeat;
 }
 
+/* Loader CSS - Search Box */
+form .form-item input.form-text {
+  background-image: none;
+}
+
 /* Search Related CSS */
 .search form .form-type-select select {
   cursor: pointer;
