Removed Outline on focus for select in search block

--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -78,6 +78,10 @@ form .form-item input.form-text {
   cursor: pointer;
 }
 
+form .form-select:not(.editor):focus-visible {
+  outline: none;
+}
+
 @media screen and (max-width: 480px) {
   .search-results-container .search form {
     -webkit-box-orient: vertical;
