--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -202,3 +202,59 @@ form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search
     padding-bottom: 0.75rem;
     line-height: 1.625rem;
 }
+
+
+/* Bflex Calculator - 'see results' form styles */
+
+.webform-submission-gated-form-bflex-form {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.webform-submission-gated-form-bflex-form>* {
+    flex-basis: 100%;
+}
+
+.webform-submission-gated-form-bflex-form .form-item-first-name input,
+.webform-submission-gated-form-bflex-form .form-item-last-name input,
+.webform-submission-gated-form-bflex-form .form-item-email input {
+    height: 2.125rem;
+}
+
+.webform-submission-gated-form-bflex-form .form-item-first-name {
+    padding-right: 12px;
+}
+
+.webform-submission-gated-form-bflex-form .form-item-last-name {
+    padding-left: 12px;
+}
+
+.webform-submission-gated-form-bflex-form .form-type-checkbox {
+    display: block;
+}
+
+.webform-submission-gated-form-bflex-form .form-type-checkbox label {
+    display: inline-block;
+    text-align: left;
+    color: gray;
+    margin-bottom: 6px;
+    font-weight: bold;
+}
+
+.webform-submission-gated-form-bflex-form .form-type-checkbox .webform-element-description {
+    display: inline;
+    line-height: 1.5;
+    padding-left: 5px;
+    font-weight: normal;
+    color: gray;
+}
+
+.webform-submission-gated-form-bflex-form .form-type-checkbox .webform-element-description a {
+    text-decoration: none;
+    color: #0d6efd;
+}
+
+.webform-submission-gated-form-bflex-form .form-item-first-name,
+.webform-submission-gated-form-bflex-form .form-item-last-name {
+    flex-basis: 50%;
+}
