--- a/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
+++ b/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
@@ -12,6 +12,7 @@
 
 .h5p-image-hotspot-popup {
   padding: 0;
+  transition: none;
 }
 
 .h5p-image-hotspot-has-header .h5p-image-hotspot-popup-body {
