fixed VER2-1567 and hotspot

--- a/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
+++ b/docroot/modules/custom/verathon_customization/css/custom-h5p-overrides.css
@@ -4,6 +4,17 @@
 
 .h5p-image-hotspot {
   font-size: 1.2rem;
+  background: transparent;
+  box-shadow: none;
+  border: none;
+}
+
+.h5p-image-hotspot-popup-pointer {
+  transition: none;
+}
+
+.h5p-image-hotspot-popup-content .h5p-image-hotspot-popup-header {
+  display: none;
 }
 
 .h5p-content-controls {
